src/parser/generated/AegisLangParser.py
# Generated from AegisLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AegisLangParser ( Parser ):

    grammarFileName = "AegisLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'module'", "'struct'", "'enum'", "'fn'", 
                     "'const'", "'let'", "'return'", "'if'", "'else'", "'for'", 
                     "'in'", "'while'", "'await'", "'Option'", "'Result'", 
                     "'None'", "'and'", "'or'", "<INVALID>", "<INVALID>", 
                     "':'", "';'", "','", "'.'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "'->'", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'?'", "'INDENT'", "'DEDENT'" ]

    symbolicNames = [ "<INVALID>", "MODULE", "STRUCT", "ENUM", "FN", "CONST", 
                      "LET", "RETURN", "IF", "ELSE", "FOR", "IN", "WHILE", 
                      "AWAIT", "OPTION", "RESULT", "NONE", "AND", "OR", 
                      "PRIMITIVE_TYPE", "BOOLEAN_LITERAL", "COLON", "SEMICOLON", 
                      "COMMA", "DOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACKET", "RBRACKET", "ARROW", "ASSIGN", "PLUS", 
                      "MINUS", "MUL", "DIV", "MOD", "NOT", "EQUAL", "NOT_EQUAL", 
                      "LESS_THAN", "LESS_EQUAL", "GREATER_THAN", "GREATER_EQUAL", 
                      "QUESTION", "INDENT", "DEDENT", "IDENTIFIER", "INTEGER_LITERAL", 
                      "FLOAT_LITERAL", "STRING_LITERAL", "WHITESPACE", "COMMENT" ]

    RULE_program = 0
    RULE_moduleDecl = 1
    RULE_structDecl = 2
    RULE_fieldDecl = 3
    RULE_enumDecl = 4
    RULE_enumVariant = 5
    RULE_fnDecl = 6
    RULE_paramList = 7
    RULE_parameter = 8
    RULE_constDecl = 9
    RULE_type = 10
    RULE_statement = 11
    RULE_variableDecl = 12
    RULE_assignmentStmt = 13
    RULE_returnStmt = 14
    RULE_ifStmt = 15
    RULE_forStmt = 16
    RULE_whileStmt = 17
    RULE_expressionStmt = 18
    RULE_expression = 19
    RULE_expressionList = 20
    RULE_primary = 21
    RULE_identifier = 22

    ruleNames =  [ "program", "moduleDecl", "structDecl", "fieldDecl", "enumDecl", 
                   "enumVariant", "fnDecl", "paramList", "parameter", "constDecl", 
                   "type", "statement", "variableDecl", "assignmentStmt", 
                   "returnStmt", "ifStmt", "forStmt", "whileStmt", "expressionStmt", 
                   "expression", "expressionList", "primary", "identifier" ]

    EOF = Token.EOF
    MODULE=1
    STRUCT=2
    ENUM=3
    FN=4
    CONST=5
    LET=6
    RETURN=7
    IF=8
    ELSE=9
    FOR=10
    IN=11
    WHILE=12
    AWAIT=13
    OPTION=14
    RESULT=15
    NONE=16
    AND=17
    OR=18
    PRIMITIVE_TYPE=19
    BOOLEAN_LITERAL=20
    COLON=21
    SEMICOLON=22
    COMMA=23
    DOT=24
    LPAREN=25
    RPAREN=26
    LBRACE=27
    RBRACE=28
    LBRACKET=29
    RBRACKET=30
    ARROW=31
    ASSIGN=32
    PLUS=33
    MINUS=34
    MUL=35
    DIV=36
    MOD=37
    NOT=38
    EQUAL=39
    NOT_EQUAL=40
    LESS_THAN=41
    LESS_EQUAL=42
    GREATER_THAN=43
    GREATER_EQUAL=44
    QUESTION=45
    INDENT=46
    DEDENT=47
    IDENTIFIER=48
    INTEGER_LITERAL=49
    FLOAT_LITERAL=50
    STRING_LITERAL=51
    WHITESPACE=52
    COMMENT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AegisLangParser.EOF, 0)

        def moduleDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AegisLangParser.ModuleDeclContext)
            else:
                return self.getTypedRuleContext(AegisLangParser.ModuleDeclContext,i)


        def getRuleIndex(self):
            return AegisLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = AegisLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 46
                self.moduleDecl()
                self.state = 49 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 51
            self.match(AegisLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODULE(self):
            return self.getToken(AegisLangParser.MODULE, 0)

        def identifier(self):
            return self.getTypedRuleContext(AegisLangParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(AegisLangParser.COLON, 0)

        def INDENT(self):
            return self.getToken(AegisLangParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(AegisLangParser.DEDENT, 0)

        def structDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AegisLangParser.StructDeclContext)
            else:
                return self.getTypedRuleContext(AegisLangParser.StructDeclContext,i)


        def enumDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AegisLangParser.EnumDeclContext)
            else:
                return self.getTypedRuleContext(AegisLangParser.EnumDeclContext,i)


        def fnDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AegisLangParser.FnDeclContext)
            else:
                return self.getTypedRuleContext(AegisLangParser.FnDeclContext,i)


        def constDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AegisLangParser.ConstDeclContext)
            else:
                return self.getTypedRuleContext(AegisLangParser.ConstDeclContext,i)


        def getRuleIndex(self):
            return AegisLangParser.RULE_moduleDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuleDecl" ):
                listener.enterModuleDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuleDecl" ):
                listener.exitModuleDecl(self)




    def moduleDecl(self):

        localctx = AegisLangParser.ModuleDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_moduleDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(AegisLangParser.MODULE)
            self.state = 54
            self.identifier()
            self.state = 55
            self.match(AegisLangParser.COLON)
            self.state = 56
            self.match(AegisLangParser.INDENT)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0):
                self.state = 61
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2]:
                    self.state = 57
                    self.structDecl()
                    pass
                elif token in [3]:
                    self.state = 58
                    self.enumDecl()
                    pass
                elif token in [4]:
                    self.state = 59
                    self.fnDecl()
                    pass
                elif token in [5]:
                    self.state = 60
                    self.constDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(AegisLangParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(AegisLangParser.STRUCT, 0)

        def identifier(self):
            return self.getTypedRuleContext(AegisLangParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(AegisLangParser.COLON, 0)

        def INDENT(self):
            return self.getToken(AegisLangParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(AegisLangParser.DEDENT, 0)

        def fieldDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AegisLangParser.FieldDeclContext)
            else:
                return self.getTypedRuleContext(AegisLangParser.FieldDeclContext,i)


        def getRuleIndex(self):
            return AegisLangParser.RULE_structDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDecl" ):
                listener.enterStructDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDecl" ):
                listener.exitStructDecl(self)




    def structDecl(self):

        localctx = AegisLangParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(AegisLangParser.STRUCT)
            self.state = 69
            self.identifier()
            self.state = 70
            self.match(AegisLangParser.COLON)
            self.state = 71
            self.match(AegisLangParser.INDENT)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==48:
                self.state = 72
                self.fieldDecl()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(AegisLangParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(AegisLangParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(AegisLangParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(AegisLangParser.TypeContext,0)


        def ASSIGN(self):
            return self.getToken(AegisLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(AegisLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AegisLangParser.RULE_fieldDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldDecl" ):
                listener.enterFieldDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldDecl" ):
                listener.exitFieldDecl(self)




    def fieldDecl(self):

        localctx = AegisLangParser.FieldDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fieldDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.identifier()
            self.state = 81
            self.match(AegisLangParser.COLON)
            self.state = 82
            self.type_()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 83
                self.match(AegisLangParser.ASSIGN)
                self.state = 84
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENUM(self):
            return self.getToken(AegisLangParser.ENUM, 0)

        def identifier(self):
            return self.getTypedRuleContext(AegisLangParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(AegisLangParser.COLON, 0)

        def INDENT(self):
            return self.getToken(AegisLangParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(AegisLangParser.DEDENT, 0)

        def enumVariant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AegisLangParser.EnumVariantContext)
            else:
                return self.getTypedRuleContext(AegisLangParser.EnumVariantContext,i)


        def getRuleIndex(self):
            return AegisLangParser.RULE_enumDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumDecl" ):
                listener.enterEnumDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumDecl" ):
                listener.exitEnumDecl(self)




    def enumDecl(self):

        localctx = AegisLangParser.EnumDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_enumDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(AegisLangParser.ENUM)
            self.state = 88
            self.identifier()
            self.state = 89
            self.match(AegisLangParser.COLON)
            self.state = 90
            self.match(AegisLangParser.INDENT)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==48:
                self.state = 91
                self.enumVariant()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(AegisLangParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumVariantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(AegisLangParser.IdentifierContext,0)


        def LPAREN(self):
            return self.getToken(AegisLangParser.LPAREN, 0)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AegisLangParser.TypeContext)
            else:
                return self.getTypedRuleContext(AegisLangParser.TypeContext,i)


        def RPAREN(self):
            return self.getToken(AegisLangParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AegisLangParser.COMMA)
            else:
                return self.getToken(AegisLangParser.COMMA, i)

        def getRuleIndex(self):
            return AegisLangParser.RULE_enumVariant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumVariant" ):
                listener.enterEnumVariant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumVariant" ):
                listener.exitEnumVariant(self)




    def enumVariant(self):

        localctx = AegisLangParser.EnumVariantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_enumVariant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.identifier()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 100
                self.match(AegisLangParser.LPAREN)
                self.state = 101
                self.type_()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==23:
                    self.state = 102
                    self.match(AegisLangParser.COMMA)
                    self.state = 103
                    self.type_()
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 109
                self.match(AegisLangParser.RPAREN)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FnDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FN(self):
            return self.getToken(AegisLangParser.FN, 0)

        def identifier(self):
            return self.getTypedRuleContext(AegisLangParser.IdentifierContext,0)


        def LPAREN(self):
            return self.getToken(AegisLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(AegisLangParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(AegisLangParser.COLON, 0)

        def INDENT(self):
            return self.getToken(AegisLangParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(AegisLangParser.DEDENT, 0)

        def paramList(self):
            return self.getTypedRuleContext(AegisLangParser.ParamListContext,0)


        def ARROW(self):
            return self.getToken(AegisLangParser.ARROW, 0)

        def type_(self):
            return self.getTypedRuleContext(AegisLangParser.TypeContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AegisLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(AegisLangParser.StatementContext,i)


        def getRuleIndex(self):
            return AegisLangParser.RULE_fnDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFnDecl" ):
                listener.enterFnDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFnDecl" ):
                listener.exitFnDecl(self)




    def fnDecl(self):
